src/objects/Planet__c.object
<CustomObject>
    <fields>
        <fullName>Dominant_Life_Form__c</fullName>
        <label>Dominant Life Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Live_Forms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Galaxy__c</fullName>
        <label>Galaxy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Milky Way</fullName>
                </value>
                <value>
                    <fullName>Eye of Sauron</fullName>
                </value>
                <value>
                    <fullName>Andromeda Galaxy</fullName>
                </value>
                <value>
                    <fullName>Cigar Galaxy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Galaxy_Elements__c</fullName>
        <label>Sub Galaxy Elements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Galaxy__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East Milky Way</fullName>
                </value>
                <value>
                    <fullName>North Milky Way</fullName>
                </value>
                <value>
                    <fullName>Very Milky Way</fullName>
                </value>
                <value>
                    <fullName>Hazelnut Milk Way</fullName>
                </value>
                <value>
                    <fullName>Core Andromeda</fullName>
                </value>
                <value>
                    <fullName>Android Andromeda</fullName>
                </value>
                <value>
                    <fullName>Camel Andromedar</fullName>
                </value>
                <value>
                    <fullName>Frodo Got It</fullName>
                </value>
                <value>
                    <fullName>Frodo Brings It</fullName>
                </value>
                <value>
                    <fullName>Frodo Drops It</fullName>
                </value>
                <value>
                    <fullName>Vegueros</fullName>
                </value>
                <value>
                    <fullName>Vega Fina</fullName>
                </value>
                <value>
                    <fullName>Cohiba</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surface_Type__c</fullName>
        <label>Surface Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Gas</fullName>
                </value>
                <value>
                    <fullName>Green Gas</fullName>
                </value>
                <value>
                    <fullName>Grey Gas</fullName>
                </value>
                <value>
                    <fullName>Forest</fullName>
                </value>
                <value>
                    <fullName>See</fullName>
                </value>
                <value>
                    <fullName>Mountains</fullName>
                </value>
                <value>
                    <fullName>Beach</fullName>
                </value>
                <value>
                    <fullName>Red Rocks</fullName>
                </value>
                <value>
                    <fullName>Grey Rocks</fullName>
                </value>
                <value>
                    <fullName>White Rocks</fullName>
                </value>
                <value>
                    <fullName>Shiny Rocks</fullName>
                </value>
                <value>
                    <fullName>White Ice</fullName>
                </value>
                <value>
                    <fullName>Whiter Ice</fullName>
                </value>
                <value>
                    <fullName>Less White Ice</fullName>
                </value>
                <value>
                    <fullName>TEST VALUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Translation_Test_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Translation Test A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Translation_Test_B__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Translation Test B</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>orbit__c</fullName>
        <label>orbit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Planet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Galaxy__c</columns>
        <columns>Sub_Galaxy_Elements__c</columns>
        <columns>Dominant_Life_Form__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Surface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Gas_Giants</fullName>
        <columns>NAME</columns>
        <columns>Galaxy__c</columns>
        <columns>Sub_Galaxy_Elements__c</columns>
        <columns>Dominant_Life_Form__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Surface_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Planet__c.Gas_Giant</value>
        </filters>
        <label>All Gas Giants</label>
    </listViews>
    <nameField>
        <label>Planet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planets</pluralLabel>
    <recordTypes>
        <fullName>Earth_Like</fullName>
        <active>true</active>
        <label>Earth Like</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gas_Giant</fullName>
        <active>true</active>
        <label>Gas Giant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ice_Desert</fullName>
        <active>true</active>
        <label>Ice Desert</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>No_Empty_Name_or_Galaxy</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   /**
   * MOD validation rules support comments. 
   * If you need to change something, 
   * you can just modify the comment
   **/
   ISBLANK( Name ) ,
   ISPICKVAL( Galaxy__c, &quot;&quot; ) 
)</errorConditionFormula>
        <errorMessage>Please provide at least a name and a galaxy for your new planet. Come on.</errorMessage>
    </validationRules>
</CustomObject>